Read RSA keys from inputstream